--- a/doc/paper.bib
+++ b/doc/paper.bib
@@ -130,3 +130,22 @@
   publisher    = {Springer},
   year         = {2021}
 }
+@inproceedings{DBLP:conf/aaai/MalhotraS22,
+  author       = {Sagar Malhotra and
+                  Luciano Serafini},
+  title        = {Weighted Model Counting in {FO2} with Cardinality Constraints and
+                  Counting Quantifiers: {A} Closed Form Formula},
+  booktitle    = {{AAAI}},
+  pages        = {5817--5824},
+  publisher    = {{AAAI} Press},
+  year         = {2022}
+}
+@article{DBLP:journals/corr/abs-2306-04189,
+  author       = {Paulius Dilkas and
+                  Vaishak Belle},
+  title        = {Synthesising Recursive Functions for First-Order Model Counting: Challenges,
+                  Progress, and Conjectures},
+  journal      = {CoRR},
+  volume       = {abs/2306.04189},
+  year         = {2023}
+}
